# rkiv-python

./: .gitignore  README.md  depends.sh  pyproject.toml  rkiv.json  tasks.py
src/rkiv/: arm.py  audio.py  cli.py  collector.py  config.py  dgmap.py  finletter.py  freshjelly.py  handbrake.py  htmlassets.py  inventory.py  itunes.py  jellyfinproxy.py  makemkv.py  opticaldevices.py  rewatch.py  symlinkmirror.py  video.py
src/rkiv/arm/: __init__.py  commands.py  tui.py
src/rkiv/commands/: __init__.py  groups.py
src/rkiv/itunes/: commands.py
tests/: test_cli.py  test_config.py  test_dgmap.py  test_itunes.py
tests/resources/: iTunes.xml
tests/test_arm/: test_tui.py
