[tool.poetry]
name = "rkiv"
version = "0.1.0"
description = ""
authors = ["CherryFloors <d.ryan.barden@gmail.com>"]
readme = "README.md"
packages = [{include = "rkiv", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.scripts]
rkiv = "rkiv.cli:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.5"}
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
invoke = "^2.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]


[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
