[tool.poetry]
name = "rkiv"
version = "0.1.0"
description = ""
authors = ["CherryFloors <d.ryan.barden@gmail.com>"]
readme = "README.md"
packages = [{include = "rkiv", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.31.0"
pandas = "^2.0.1"
pydantic = "^1.10.8"
jellyfin-apiclient-python = "^1.9.2"
pydvdid = "^1.1"
pyudev = "^0.24.1"
r128gain = "^1.0.7"
pycdio = "^2.1.1"
thefuzz = "^0.20.0"

[tool.poetry.scripts]
rkiv = "rkiv.cli:cli"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.5"}
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
invoke = "^2.1.1"
pyflakes = "^3.0.1"
pylint = "^2.17.4"
bpython = "^0.24"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]


[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
